--- a/tetoris.html
+++ b/tetoris.html
@@ -6,40 +6,72 @@
 function setup(){
 	CANVAS_WIDTH=500;
 	CANVAS_HEIGHT=500;
-	SPEED=10;
+	TILE_WIDTH=8;
+	TILE_HEIGHT=20;
+	TILE_SIZE=20;
+	field=new Array((TILE_WIDTH+2)*(TILE_HEIGHT+2));//周り余分にとる
+	for(var i=0; i<TILE_WIDTH+2,i++){
+		field[i+0*TILE_WIDTH]=1;
+		field[i+(TILE_HEIGHT+1)*TILE_WIDTH)]=1;
+	}
+	for(i=0;i<TILE_HEIGHT,i+){
+		field[0+i*TILE_HEIGHT]=1;
+		field[TILE_WIDTH+i*TILE_HEIGHT]=1;
+	}
 	createCanvas(CANVAS_WIDTH,CANVAS_HEIGHT);
-	fill(0);
-	Box box
-	box.posx=10;
-	box.posy=10;
+	frameRate(30);
+	pl = new Boxcontrol(3,0);
 }
 function draw(){
-	background(255);
-	rect(box.posx,box.posy,box.WIGTH,box.HEGHT);
+	if(frameCount%30==0){
+		
+		pl.move(0,1);
+	}
+
+	background(123);
+	stroke(0);
+	noFill();
+	for(var i=0;i<TILE_HEIGHT;i++){
+		for(var j=0;j<TILE_WIDTH;j++){
+			rectile(j,i);
+		}
+	}
+	pl.paint();
+}
+function rectile(x,y){
+	rect(30+x*TILE_SIZE,50+y*TILE_SIZE,TILE_SIZE,TILE_SIZE);
 }
 function keyPressed(){
-	if(keyCode==UP_ARROW){
-		box.move(SPEED,0);
+	if(keyCode===LEFT_ARROW){
+		pl.move(-1,0);
 	}
-	if(keyCode==DOWN_ARROW){
-		box.move(-SPEED,0);
+	if(keyCode===RIGHT_ARROW){
+		pl.move(1,0);
 	}
+	if(keyCode===UP_ARROW){
+		pl.move(0,-1);
 	}
-	if(keyCode==LEFT_ARROW){
-		box.move(0,SPEED);
-	}
-	if(keyCode==RGHIT_ARROW){
-		box.move(0,-SPEED);
+	if(keyCode===DOWN_ARROW){
+		pl.move(0,1);
 	}
 }
-class Box{
-	WIGTH=50;
-	HEGHT=50;
-	posx;
-	posy;
-	function move(x,y){
-		posx+=(posx+x+CANVAS_WIDTH)%CANVAS_WIDTH;
-		posy+=(posx+x+CANVAS_HEIGHT)%CANVAS_HEIGHT;
+class Boxcontrol{
+	constructor(x,y){
+		this.x=x;
+		this.y=y;
+	}
+	move(dx,dy){
+		if(
+		this.x+=dx;
+		this.y+=dy;
+		this.x=Math.min(this.x,TILE_WIDTH-1);
+		this.y=Math.min(this.y,TILE_HEIGHT-1);
+		this.x=Math.max(this.x,0);
+		this.y=Math.max(this.y,0);
+	}
+	paint(){
+		fill(255,0,0);
+		rectile(this.x,this.y);
 	}
 }
 </script>
