--- a/tetoris.html
+++ b/tetoris.html
@@ -10,32 +10,46 @@ function setup(){
 	TILE_HEIGHT=20;
 	TILE_SIZE=20;
 	field=new Array((TILE_WIDTH+2)*(TILE_HEIGHT+2));//周り余分にとる
-	for(var i=0; i<TILE_WIDTH+2;i++){
+	for(i=0;i<field.length;i++){
+		field[i]=0;
+	}
+	for(i=0; i<TILE_WIDTH+2;i++){
 		field[i+0*TILE_WIDTH]=1;
-		field[i+(TILE_HEIGHT+1)*TILE_WIDTH]=1;
+		field[i+(TILE_HEIGHT+1)*(TILE_WIDTH+2)]=1;
 	}
 	for(i=0;i<TILE_HEIGHT;i++){
-		field[0+i*TILE_HEIGHT]=1;
-		field[TILE_WIDTH+i*TILE_HEIGHT]=1;
+		field[0+i*(TILE_WIDTH+2)]=1;
+		field[TILE_WIDTH+1+i*(TILE_WIDTH+2)]=1;
 	}
 	createCanvas(CANVAS_WIDTH,CANVAS_HEIGHT);
 	frameRate(30);
-	pl = new Boxcontrol(3,0);
+	pl = new Boxcontrol(3,1);
 }
 function draw(){
 	if(frameCount%30==0){
-		
-		pl.move(0,1);
+		if(field[(TILE_WIDTH+2)*(pl.y+1)+pl.x]==1){
+			field[(TILE_WIDTH+2)*pl.y+pl.x]=1;
+			pl = new Boxcontrol(3,1);
+		}
+		else pl.move(0,1);
 	}
 
 	background(123);
-	stroke(0);
-	noFill();
-	for(var i=0;i<TILE_HEIGHT;i++){
-		for(var j=0;j<TILE_WIDTH;j++){
-			rectile(j,i);
+	for(var y=1;y<=TILE_HEIGHT;y++){
+		for(var x=1;x<=TILE_WIDTH;x++){
+			if(field[(TILE_WIDTH+2)*y+x]==0){
+				stroke(0);
+				noFill();
+				rectile(x,y);
+			}
+			else if(field[(TILE_WIDTH+2)*y+x]==1){
+				fill(255,0,0);
+				rectile(x,y);
+			}
 		}
 	}
+	fill(0);
+	text(pl.x+","+pl.y,10,10);
 	pl.paint();
 }
 function rectile(x,y){
@@ -63,10 +77,10 @@ class Boxcontrol{
 	move(dx,dy){
 		this.x+=dx;
 		this.y+=dy;
-		this.x=Math.min(this.x,TILE_WIDTH-1);
-		this.y=Math.min(this.y,TILE_HEIGHT-1);
-		this.x=Math.max(this.x,0);
-		this.y=Math.max(this.y,0);
+		this.x=Math.min(this.x,TILE_WIDTH);
+		this.y=Math.min(this.y,TILE_HEIGHT);
+		this.x=Math.max(this.x,1);
+		this.y=Math.max(this.y,1);
 	}
 	paint(){
 		fill(255,0,0);
