--- a/tetoris.html
+++ b/tetoris.html
@@ -9,6 +9,7 @@ function setup(){
 	TILE_WIDTH=8;
 	TILE_HEIGHT=20;
 	TILE_SIZE=20;
+	frame_tmp=0;
 	field=new Array((TILE_WIDTH+2)*(TILE_HEIGHT+2));//周り余分にとる
 	for(i=0;i<field.length;i++){
 		field[i]=0;
@@ -27,12 +28,15 @@ function setup(){
 	pl = new Boxcontrol(3,1);
 }
 function draw(){
-	if(frameCount%30==0){
-		if(field[(TILE_WIDTH+2)*(pl.y+1)+pl.x]==1){
+	if((frameCount+frame_tmp)%30==0){
+		if(checkmove(0,1)){
+			pl.move(0,1);
+		}
+		else {
+			frame_tmp=frameCount%30;
 			field[(TILE_WIDTH+2)*pl.y+pl.x]=1;
 			pl = new Boxcontrol(3,1);
 		}
-		else pl.move(0,1);
 	}
 
 	background(123);
@@ -57,18 +61,43 @@ function rectile(x,y){
 	rect(30+x*TILE_SIZE,50+y*TILE_SIZE,TILE_SIZE,TILE_SIZE);
 }
 function keyPressed(){
-	if(keyCode===LEFT_ARROW){
-		pl.move(-1,0);
+	switch(keyCode){
+	case LEFT_ARROW:
+		if(checkmove(-1,0)){
+			pl.move(-1,0);
+		}
+		break;
+	case RIGHT_ARROW:
+		if(checkmove(1,0)){
+			pl.move(1,0);
+		}
+		break;
+	case UP_ARROW:
+		if(checkmove(0,-1)){
+			pl.move(0,-1);
+		}
+		break;
+	case DOWN_ARROW:
+		if(checkmove(0,1)){
+			pl.move(0,1);
+		}
+		else{
+			frame_tmp=frameCount%30;
+			field[(TILE_WIDTH+2)*pl.y+pl.x]=1;
+			pl = new Boxcontrol(3,1);
+		}
+		break;
 	}
-	if(keyCode===RIGHT_ARROW){
-		pl.move(1,0);
+}
+function checkmove(dx,dy){
+	var bool;
+	if(field[(TILE_WIDTH+2)*(pl.y+dy)+pl.x+dx]>0){
+		bool=false;
 	}
-	if(keyCode===UP_ARROW){
-		pl.move(0,-1);
+	else if(field[(TILE_WIDTH+2)*(pl.y+dy)+pl.x+dx]==0){
+		bool=true;
 	}
-	if(keyCode===DOWN_ARROW){
-		pl.move(0,1);
-	}
+	return bool;
 }
 class Boxcontrol{
 	constructor(x,y){
@@ -78,10 +107,6 @@ class Boxcontrol{
 	move(dx,dy){
 		this.x+=dx;
 		this.y+=dy;
-		this.x=Math.min(this.x,TILE_WIDTH);
-		this.y=Math.min(this.y,TILE_HEIGHT);
-		this.x=Math.max(this.x,1);
-		this.y=Math.max(this.y,1);
 	}
 	paint(){
 		fill(255,0,0);
