--- a/tetoris.html
+++ b/tetoris.html
@@ -2,6 +2,8 @@
 <html>
 <head>
 <script src=https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.5.4/p5.min.js></script>
+<script src=Field.js></script>
+<script src=Tetorimino.js></script>
 <script>
 function setup(){
 	CANVAS_WIDTH=500;
@@ -10,59 +12,20 @@ function setup(){
 	TILE_HEIGHT=20;
 	TILE_SIZE=20;
 	frame_tmp=0;
-	field=new Array((TILE_WIDTH+2)*(TILE_HEIGHT+2));//周り余分にとる
-	for(i=0;i<field.length;i++){
-		field[i]=0;
-	}
-	for(i=0; i<TILE_WIDTH+2;i++){
-		field[i+0*TILE_WIDTH]=1;
-		field[i+(TILE_HEIGHT+1)*(TILE_WIDTH+2)]=1;
-	}
-	for(i=0;i<TILE_HEIGHT;i++){
-		field[0+i*(TILE_WIDTH+2)]=1;
-		field[TILE_WIDTH+1+i*(TILE_WIDTH+2)]=1;
-	}
-	//DEBUG
-	for(i=1;i<TILE_WIDTH;i++){
-		field[(TILE_WIDTH+2)*20+i]=1;
-	}
-	//DEBUG
+	f=new Field(TILE_WIDTH+2,TILE_HEIGHT+2);
+
 	canvas=createCanvas(CANVAS_WIDTH,CANVAS_HEIGHT);
 	canvas.parent("canvas");//canvasのid指定
 	frameRate(30);
-	pl = new Boxcontrol(3,1);
+	pl = new Tetorimino(4,1);
 }
 function draw(){
 	if((frameCount+frame_tmp)%30==0){
-		if(checkmove(0,1)){
-			pl.move(0,1);
-		}
-		else {
-			frame_tmp=frameCount%30;
-			field[(TILE_WIDTH+2)*pl.y+pl.x]=1;
-			for(var y=1;y<=TILE_HEIGHT;y++){
-				if(checkdelete(y)){
-					falltile(y);
-				}
-			}
-			pl = new Boxcontrol(3,1);
-		}
+		pl.move(0,1);
 	}
 
 	background(123);
-	for(var y=1;y<=TILE_HEIGHT;y++){
-		for(var x=1;x<=TILE_WIDTH;x++){
-			if(field[(TILE_WIDTH+2)*y+x]==0){
-				stroke(0);
-				noFill();
-				rectile(x,y);
-			}
-			else if(field[(TILE_WIDTH+2)*y+x]==1){
-				fill(255,0,0);
-				rectile(x,y);
-			}
-		}
-	}
+	f.paint();
 	fill(0);
 	text(pl.x+","+pl.y,10,10);
 	pl.paint();
@@ -73,63 +36,17 @@ function rectile(x,y){
 function keyPressed(){
 	switch(keyCode){
 	case LEFT_ARROW:
-		if(checkmove(-1,0)){
-			pl.move(-1,0);
-		}
+		pl.move(-1,0);
 		break;
 	case RIGHT_ARROW:
-		if(checkmove(1,0)){
-			pl.move(1,0);
-		}
+		pl.move(1,0);
 		break;
 	case UP_ARROW:
-		if(checkmove(0,-1)){
-			pl.move(0,-1);
-		}
+		pl.move(0,-1);
 		break;
 	case DOWN_ARROW:
-		if(checkmove(0,1)){
-			pl.move(0,1);
-		}
+		pl.move(0,1);
 		break;
-	}
-}
-function checkmove(dx,dy){
-	if(field[(TILE_WIDTH+2)*(pl.y+dy)+pl.x+dx]==1){
-		return false;
-	}
-	return true;
-}
-function checkdelete(y){
-	for(var x=1;x<=TILE_WIDTH;x++){
-		if(field[(TILE_WIDTH+2)*y+x]==0){
-			return false;
-		}
-	}
-	return true;
-}
-function falltile(startY){
-	for(var y=startY;y>1;y--){
-		for(var x=1; x<=TILE_WIDTH;x++){
-			field[(TILE_WIDTH+2)*y+x]=field[(TILE_WIDTH+2)*(y-1)+x];
-		}
-	}
-	for(var x=1; x<=TILE_WIDTH;x++){
-		field[(TILE_WIDTH+2)*1+x]=0;
-	}
-}
-class Boxcontrol{
-	constructor(x,y){
-		this.x=x;
-		this.y=y;
-	}
-	move(dx,dy){
-		this.x+=dx;
-		this.y+=dy;
-	}
-	paint(){
-		fill(255,0,0);
-		rectile(this.x,this.y);
 	}
 }
 </script>
